--- a/src/frontend/components/PageNav/PageNav.css
+++ b/src/frontend/components/PageNav/PageNav.css
@@ -8,6 +8,7 @@
   box-shadow: var(--box-shadow);
   display: flex;
   justify-content: space-around;
+  max-height: 2rem;
 }
 .page-nav a {
   color: inherit;
