--- a/src/frontend/pages/Home/Home.css
+++ b/src/frontend/pages/Home/Home.css
@@ -1,3 +1,3 @@
 .home-container {
-  margin: 0 1rem;
+  margin: 0 1rem 4rem;
 }
