--- a/src/frontend/pages/Profile/Profile.css
+++ b/src/frontend/pages/Profile/Profile.css
@@ -1,3 +1,6 @@
+.profile-container {
+  margin-bottom: 4rem;
+}
 .profile__avatar {
   width: 100px;
   height: 100px;
