--- a/src/frontend/pages/Signup/Signup.css
+++ b/src/frontend/pages/Signup/Signup.css
@@ -1,6 +1,7 @@
 .signup-form {
   display: flex;
   justify-content: center;
+  margin-bottom: 4rem;
 }
 .signup-container {
   display: flex;
